--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,23 +1,13 @@
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-  page: true
-  socials:
-    x: yangshunz
-    github: yangshun
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
-  page:
-    # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
-  socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+MinjiKim:
+    name: MinjiKim
+    title: FrontEnd Engineer
+    image_url: /img/myPic/bichon-p1.png
+    # page:
+    #     false,
+    #     # # customize the url of the author page at /blog/authors/<permalink>
+    #     # permalink: "/minjiKim"
+    socials:
+        # x: sebastienlorber
+        linkedin: https://www.linkedin.com/in/kimbision/
+        github: https://github.com/minjidev
+        # newsletter: https://thisweekinreact.com
