feat: update blog content

--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -32,3 +32,8 @@ career:
     label: Career
     permalink: /career
     description: Career growth
+
+javascript:
+    label: JavaScript
+    permalink: /javascript
+    description: JavaScript
